# hexapod-inertial-force-removal

./: .gitignore  avg_model.py  cnnlstm_model.py  compare_models.py  fir_model.py  format_data.py  linear_models.py  lstm_model.py  main.py  mlp_model.py  pyproject.toml  ss_model.py
hexapod_force_modeling/: format_data.py  mlp_model.py
