[project]
name = "hexapod-inertial-force-removal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ezc3d>=1.5.19",
    "ipython>=8.37.0",
    "matplotlib>=3.10.7",
    "nfoursid>=1.0.2",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
]
