[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hexapod-inertial-force-removal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "c3d>=0.6.0",
    "ezc3d>=1.5.19",
    "h5py>=3.15.1",
    "ipython>=8.37.0",
    "matplotlib>=3.10.7",
    "nfoursid>=1.0.2",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
    "torch"
]

[tool.uv.pip]
extra-index-url = ["https://download.pytorch.org/whl/cu126"]

[tool.setuptools]
packages = ["hexapod_force_modeling"]